# a.ni.me

./: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  app.vue  bun.lockb  codegen.ts  error.vue  eslint.config.mjs  loading.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml  publish.yml  validate.yml
app/: app.vue  error.vue
app/@types/: lucide-vue-next.d.ts
app/assets/css/: tailwind.css  tippy.css
app/components/: AccountPart.vue  CheckForUpdatesButton.vue
app/components/filter/: Basic.vue
app/components/media/: Item.vue  List.vue  Skelleton.vue
app/components/settings/: Label.vue
app/components/statusbar/: Button.vue  Index.vue
app/components/titlebar/: Controls.vue  Index.vue  Link.vue  Navigation.vue
app/components/ui/: Button.vue  Dropdown.vue  Error.vue  Icon.vue  Toggle.vue  ToggleIcon.vue
app/composables/: usePageScopedState.ts  useUpdater.ts  useVersion.ts  useWhenAuthentificated.ts
app/middleware/: auth.global.ts  transition.global.ts
app/pages/: explore.vue  index.vue  settings.vue  welcome.vue
app/plugins/: 01.apollo-client.ts  api.ts  tippy.ts
app/stores/: auth.ts  filters.ts  search.ts
app/types/: viewer.ts
app/utils/: error.ts
assets/: tippy.scss
assets/css/: basic.scss
components/: Account.vue  Anime.vue  AnimeSearch.vue  Animes.vue  Card.vue  CheckForUpdatesButton.vue  Dropdown.vue  Info.vue  Modal.vue  SkeletonAnime.vue  Titlebar.vue  Toaster.vue  Toasts.vue  ZoomImage.vue
components/Animes/: Saved.vue  Search.vue
components/Titlebar/: Controls.vue  Data.vue  Input.vue
components/settings/: Label.vue
components/statusbar/: Button.vue  Index.vue
components/titlebar/: Controls.vue  Index.vue  Link.vue  Navigation.vue
components/ui/: Button.vue  Error.vue  Icon.vue  Toggle.vue  ToggleIcon.vue
composables/: useAuth.ts  useDropdown.ts  useGlobalData.ts  usePageScopedState.ts  useSettings.ts  useUpdate.ts  useVersion.ts  useWhenAuthentificated.ts
layouts/: default.vue  grid.vue
middleware/: auth.global.ts  transition.global.ts
pages/: confetti.vue  explore.vue  grid.vue  index.vue  redirect.vue  search.vue  settings.vue  setup.vue  welcome.vue
pages/anime/: [id].vue
pages/setup/: config.vue  finish.vue  select.vue  start.vue
plugins/: 01.apollo-client.ts  01.settings.ts  animes.ts  api.ts  apollo-client.ts  cache.ts  database.ts  keyboard.ts  mitt.ts  pinia.ts  tippy.ts  toast.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/migrations/: animes.sql  migrated.sql  settings.sql
stores/: settings.ts  setup.ts  titlebar.ts  toaster.ts
types/: anime.d.ts  anime.ts  animes.ts  cache.d.ts  database.d.ts  db.d.ts  dropdown.d.ts  response.d.ts  settings.d.ts  toast.d.ts  types.d.ts  viewer.ts  yup.ts
types/anilist/: anime.d.ts  index.d.ts
utils/: anilistFetch.ts  error.ts
(+7 files in other folders)
