[package]
name = "a_ni_me"
version = "1.0.0-alpha"
description = "Manage your animes in one place"
authors = ["Waradu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.2", features = [] }
tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
tauri-plugin-prevent-default = "0.7.5"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[source.crates-io]
index = "https://github.com/rust-lang/crates.io-index"

[http]
proxy = ""
